# arc-agi-solver

./: .env.example  .gitignore  LICENSE  README.md  justfile  pyproject.toml  tagteam.yaml
docs/: decision_log.md  readme.md  roadmap.md
docs/handoffs/: agi2-approach_impl_rounds.jsonl  agi2-approach_impl_status.json  agi2-approach_plan_rounds.jsonl  agi2-approach_plan_status.json  agi2-baseline_impl_rounds.jsonl  agi2-baseline_impl_status.json  agi2-baseline_plan_rounds.jsonl  agi2-baseline_plan_status.json  agi2-solver_plan_rounds.jsonl  agi2-solver_plan_status.json  foundations_impl_rounds.jsonl  foundations_impl_status.json  foundations_plan_rounds.jsonl  foundations_plan_status.json
docs/phases/: agi2-approach.md  agi2-baseline.md  agi2-solver.md  foundations.md
docs/research/: agi2_survey.md
scripts/: fetch_agi2_data.py
src/arcsolver/agi2/: __main__.py  dataset.py  pricing.py  runner.py  scoring.py  types.py
src/arcsolver/agi2/agents/: base.py  baseline_llm.py
tests/: test_smoke.py
tests/agi2/: test_baseline_llm.py  test_dataset.py  test_pricing.py  test_runner.py  test_scoring.py
